[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prediction-commodity-distribution"
version = "0.1.0"
description = "Pure-numpy CDF math for prediction-market touch curves: PAV isotonic + Fritsch-Butland Hermite cubic + percentile inversion"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
  { name = "Michael Mustopo", email = "hello@goldprice.dev" },
]
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
]
keywords = [
  "prediction-markets",
  "polymarket",
  "kalshi",
  "cdf",
  "isotonic",
  "pchip",
  "fritsch-carlson",
  "fritsch-butland",
  "commodities",
  "tidore",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Homepage = "https://github.com/michaelmustopo/prediction-commodity-distribution"
Issues = "https://github.com/michaelmustopo/prediction-commodity-distribution/issues"
"Production user" = "https://goldprice.dev"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "pyright>=1.1.380",
]

[tool.hatch.build.targets.wheel]
packages = ["src/prediction_commodity_distribution"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "RUF"]
ignore = ["E501"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "standard"
